fix(liquor-shop):画像の設定を修正

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -39,7 +39,7 @@ const {
 	flavor,
 } = Astro.props;
 
-console.log(Astro.props);
+// console.log(Astro.props);
 ---
 
 <article class="store-item" data-area={area} data-open={open} data-end={end} data-display="true" data-taste={taste} data-flavor={flavor} data-title={title} data-number={number}>
