--- a/src/pages/store/index.astro
+++ b/src/pages/store/index.astro
@@ -93,7 +93,7 @@ const areaNameList = areas
   .sort((a, b) => a.id - b.id) // id順にソート
   .map(item => item.name); // "name"を配列にマップ
 
-console.log(areaNameList);
+// console.log(areaNameList);
 
 stores.forEach(store => {
   store.image = {};
