--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -142,4 +142,12 @@ const url = new URL(Astro.url.pathname, 'https://nga-osaka.com');
 	a{
 		word-break: break-all;
 	}
+	.googlemap>iframe {
+		width: 100%;
+		height: 300px;
+		border: 1px solid #ddd;
+		@media (min-width: 768px) {
+			height: 400px;
+		}
+	}
 </style>
