--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -54,7 +54,7 @@ manageShopList.forEach(shop => {
 });
 
 // console.log(manageShopList);
-// console.log(store._embedded);
+// console.log(store.acf);
 const eyeCatch = store._embedded['wp:featuredmedia'] ? store._embedded['wp:featuredmedia'][0]
   : {
     source_url: 'https://data.nga-osaka.com/2023/wp-content/uploads/2023/08/preparation-image16-9.jpg',
@@ -69,23 +69,25 @@ const twitter = store.acf.twitter_url ? `<li><a href="${store.acf.twitter_url}" 
 const instagram = store.acf.instagram_url ? `<li><a href="${store.acf.instagram_url}" target="_blank"><img src="/assets/images/sns-instagram.png" alt="Instagram" width="36" height="36" loading="lazy"></a></li>` : '';
 
 const snsList = (facebook || twitter || instagram) ? `<ul>${facebook + twitter + instagram}</ul>` : '';
-const googleMapSrc = `https://maps.google.co.jp/maps?output=embed&q=${store.title.rendered}&z=16`;
+const googleMapSrc = store.acf.googlemap_fix
+  ? store.acf.googlemap_fix
+  : `<iframe width="600" height="450" class="googlemap" src="https://maps.google.co.jp/maps?output=embed&q=${store.title.rendered}&z=16"></iframe>`;
 
 const notFoundImage1 = 'https://data.nga-osaka.com/2023/wp-content/uploads/2023/08/preparation-image1-1.jpg';
-const storeImage1Url = store.acf.store_image1 ? store.acf.store_image1.url : notFoundImage1;
-const storeImage1Width = store.acf.store_image1 ? store.acf.store_image1.width : '1';
-const storeImage1Height = store.acf.store_image1 ? store.acf.store_image1.height : '1';
-const storeImage1MimeType = store.acf.store_image1 ? store.acf.store_image1.mime_type.split('/')[1] : 'jpeg';
+const storeImage1Url = store.acf['liquor-shop_image1'] ? store.acf['liquor-shop_image1'].url : notFoundImage1;
+const storeImage1Width = store.acf['liquor-shop_image1'] ? store.acf['liquor-shop_image1'].width : '1';
+const storeImage1Height = store.acf['liquor-shop_image1'] ? store.acf['liquor-shop_image1'].height : '1';
+const storeImage1MimeType = store.acf['liquor-shop_image1'] ? store.acf['liquor-shop_image1'].mime_type.split('/')[1] : 'jpeg';
 
-const storeImage2Url = store.acf.store_image2 ? store.acf.store_image2.url : notFoundImage1;
-const storeImage2Width = store.acf.store_image2 ? store.acf.store_image2.width : '1';
-const storeImage2Height = store.acf.store_image2 ? store.acf.store_image2.height : '1';
-const storeImage2MimeType = store.acf.store_image2 ? store.acf.store_image2.mime_type.split('/')[1] : 'jpeg';
+const storeImage2Url = store.acf['liquor-shop_image2'] ? store.acf['liquor-shop_image2'].url : notFoundImage1;
+const storeImage2Width = store.acf['liquor-shop_image2'] ? store.acf['liquor-shop_image2'].width : '1';
+const storeImage2Height = store.acf['liquor-shop_image2'] ? store.acf['liquor-shop_image2'].height : '1';
+const storeImage2MimeType = store.acf['liquor-shop_image2'] ? store.acf['liquor-shop_image2'].mime_type.split('/')[1] : 'jpeg';
 
-const storeImage3Url = store.acf.store_image3 ? store.acf.store_image3.url : notFoundImage1;
-const storeImage3Width = store.acf.store_image3 ? store.acf.store_image3.width : '1';
-const storeImage3Height = store.acf.store_image3 ? store.acf.store_image3.height : '1';
-const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime_type.split('/')[1] : 'jpeg';
+const storeImage3Url = store.acf['liquor-shop_image3'] ? store.acf['liquor-shop_image3'].url : notFoundImage1;
+const storeImage3Width = store.acf['liquor-shop_image3'] ? store.acf['liquor-shop_image3'].width : '1';
+const storeImage3Height = store.acf['liquor-shop_image3'] ? store.acf['liquor-shop_image3'].height : '1';
+const storeImage3MimeType = store.acf['liquor-shop_image3'] ? store.acf['liquor-shop_image3'].mime_type.split('/')[1] : 'jpeg';
 
 ---
 
@@ -179,9 +181,7 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
                 <span class="u-display-block">{store.acf['liquor-shop_address1']}</span>
                 <span class="u-display-block">{store.acf['liquor-shop_address2']}</span></p>
               <!--// <p>最寄り駅：{store.acf['liquor-shop_route']}・{store.acf['liquor-shop_station']}</p>-->
-              <div>
-                <iframe width="600" height="450" class="googlemap" src={googleMapSrc}></iframe>
-              </div>
+              <div class="googlemap" set:html={googleMapSrc} />
             </dd>
           </div>
           <div class="store-spec__group">
@@ -661,14 +661,6 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
     display: flex;
     gap: var(--space-x10);
     margin: 0;
-  }
-  .googlemap {
-    width: 100%;
-    height: 300px;
-    border: 1px solid #ddd;
-    @media (min-width: 768px) {
-      height: 400px;
-    }
   }
 
   .store-image {
