--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -68,7 +68,6 @@ const facebook = store.acf.facebook_url ? `<li><a href="${store.acf.facebook_url
 const twitter = store.acf.twitter_url ? `<li><a href="${store.acf.twitter_url}" target="_blank"><img src="/assets/images/sns-x.png" alt="X(Twitter)" width="36" height="36" loading="lazy"></a></li>` : '';
 const instagram = store.acf.instagram_url ? `<li><a href="${store.acf.instagram_url}" target="_blank"><img src="/assets/images/sns-instagram.png" alt="Instagram" width="36" height="36" loading="lazy"></a></li>` : '';
 
-const snsList = (facebook || twitter || instagram) ? `<ul>${facebook + twitter + instagram}</ul>` : '';
 const googleMapSrc = store.acf.googlemap_fix
   ? store.acf.googlemap_fix
   : `<iframe width="600" height="450" class="googlemap" src="https://maps.google.co.jp/maps?output=embed&q=${store.title.rendered}&z=16"></iframe>`;
@@ -180,7 +179,6 @@ const storeImage3MimeType = store.acf['liquor-shop_image3'] ? store.acf['liquor-
               <p><span class="u-display-block">〒{store.acf['liquor-shop_zip']}</span>
                 <span class="u-display-block">{store.acf['liquor-shop_address1']}</span>
                 <span class="u-display-block">{store.acf['liquor-shop_address2']}</span></p>
-              <!--// <p>最寄り駅：{store.acf['liquor-shop_route']}・{store.acf['liquor-shop_station']}</p>-->
               <div class="googlemap" set:html={googleMapSrc} />
             </dd>
           </div>
@@ -189,12 +187,16 @@ const storeImage3MimeType = store.acf['liquor-shop_image3'] ? store.acf['liquor-
             <dd class="store-spec__description">{store.acf['liquor-shop_tel']}</dd>
           </div>
           <div class="store-spec__group">
-            <dt class="store-spec__term">Webサイト</dt>
-            <dd class="store-spec__description"><a href={store.acf['liquor-shop_url']} target="_blank">{store.acf['liquor-shop_url']}</a></dd>
+            <dt class="store-spec__term">営業時間</dt>
+            <dd class="store-spec__description">{store.acf['liquor-shop_business-hour']}</dd>
           </div>
           <div class="store-spec__group">
-            <dt class="store-spec__term">SNS</dt>
-            <dd class="store-spec__description"><ul class="sns-list" set:html={facebook + twitter + instagram} /></dd>
+            <dt class="store-spec__term">定休日</dt>
+            <dd class="store-spec__description">{store.acf['liquor-shop_holiday']}</dd>
+          </div>
+          <div class="store-spec__group">
+            <dt class="store-spec__term">Webサイト</dt>
+            <dd class="store-spec__description"><a href={store.acf['liquor-shop_website']} target="_blank">{store.acf['liquor-shop_website']}</a></dd>
           </div>
         </dl>
       </section>
